# portal

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: error.rs  main.rs
cli/src/command/: mod.rs
core/: Cargo.toml  test.txt
core/src/: broadcast.rs  codec.rs  error.rs  lib.rs  master.rs  side.rs  slave.rs  utils.rs
core/static/: big.txt  recv_Cargo.toml  small.txt
macro/: Cargo.toml
macro/src/: lib.rs
src/: broadcast.rs  codec.rs  frame.rs  lib.rs  main.rs  master.rs  side.rs
src/broadcast/: mod.rs  sender.rs
