[package]
name = "portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
log = "0.4.21"
portpicker = "0.1.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread","net", "time", "rt", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
