[package]
name = "portal-core"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bytes = "1.5.0"
log = "0.4.21"
portpicker = "0.1.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = [
  "rt-multi-thread",
  "net",
  "time",
  "rt",
  "macros",
  "sync",
] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
portal-macro = { path = "../macro" }
futures = "0.3.30"
lazy_static = "1.4.0"
sha256 = "1"
